add header and content

--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
     <title>İlk Sayfa</title>
 </head>
 <body>
+
+    <div id="header">
+       Header
+    </div>
+    <div class="content">
+
+        content
+    </div>
     <h1>Hoşgeldiniz!</h1>
     <p>Bu benim kişisel web sitemin ilk sayfasıdır.</p>
 </body>
